@@ -12,6 +12,7 @@
 	* Follow-up to bugfix #12612: Removed reference operators for objects and code cleanup
 	* Fixed bug #12517: Password change in User tools -> User setup impossible if rsaauth and saltedpassword are installed
 	* Fixed bug #12608: User settings module reports changed password and settings if there was no change at all
+	* Fixed bug #4466: Index on tx_realurl_uniqalias breaks with DBAL (thanks to Xavier Perseguers)
 
 2009-11-17  Benjamin Mack  <benni@typo3.org>
 
